--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/Styles.xaml
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/Styles.xaml
@@ -18,6 +18,11 @@
         <GradientStop Color="Transparent" Offset="1.0" />
     </LinearGradientBrush>
 
+    <LinearGradientBrush x:Key="SettingsBannerBrush" StartPoint="0.5,0" EndPoint=" 0.5,1">
+        <GradientStop Color="LightGray" Offset="0" />
+        <GradientStop Color="Transparent" Offset="1.0" />
+    </LinearGradientBrush>
+    
     <!-- styles -->
 
     <Style x:Key="InputPanelStyle" TargetType="StackPanel">
