--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/ConnectWindow.xaml
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/ConnectWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="PurgarNET.AAConnector.Console.RunbookSelector"
+﻿<Window x:Class="PurgarNET.AAConnector.Console.ConnectWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,8 +6,8 @@
         xmlns:local="clr-namespace:PurgarNET.AAConnector.Console"
         mc:Ignorable="d"
         Loaded="Window_Loaded"
-        Title="Select runbook" Width="500" Height="500" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" Topmost="True">
-
+        Title="Select..." Width="250" Height="150" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" Topmost="True" 
+        ResizeMode="NoResize" >
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -32,46 +32,30 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <ListView  ItemsSource="{Binding}" x:Name="RunbooksListView" SelectionChanged="RunbooksListView_SelectionChanged" MouseDoubleClick="RunbooksListView_MouseDoubleClick" >
+       <!-- <ListView  ItemsSource="{Binding}" x:Name="RunOnsListView" MouseDoubleClick="RunOnsListView_MouseDoubleClick" SelectionChanged="RunOnsListView_SelectionChanged" >
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="Height" Value="25" />
                 </Style>
             </ListView.ItemContainerStyle>
+        </ListView>-->
 
-            <ListView.View>
-                <GridView x:Name="gridView">
-                    <GridViewColumn Width="280" Header="Name" DisplayMemberBinding="{Binding Name}" />
-                    <GridViewColumn Width="90" Header="Type"  DisplayMemberBinding="{Binding Properties.RunbookType, Converter={StaticResource RunbookTypeToStringConverter}}" />
-                    <GridViewColumn Width="80" Header="State"  DisplayMemberBinding="{Binding Properties.State}" />
-                </GridView>
-            </ListView.View>
-        </ListView>
+        <ComboBox 
+            ItemsSource="{Binding Path=AvailableAutomationAccounts}" 
+            x:Name="AutomationAccountsComboBox" 
+            SelectionChanged="AutomationAccountsComboBox_SelectionChanged"
+            DisplayMemberPath="DisplayName"
+            />
 
-        <Grid Grid.Row="1" >
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
 
-            <StackPanel x:Name="InvalidRunbookPanel" Visibility="Collapsed">
-                <TextBlock x:Name="InvalidReasonTextBlock" Foreground="Red" Text="Selected runbook cannot be used because it is not published!" />
-            </StackPanel>
 
-            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,6,0,0">
-                <Button Grid.Row="1" Height="24" x:Name="RefreshButton" Content="Refresh" Margin="0"  HorizontalAlignment="Left" Click="RefreshButton_Click"  />
-            </StackPanel>
 
-            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,6,0,0">
 
-                <Button x:Name="OKButton" Height="24" Content="OK"  IsEnabled="False" HorizontalAlignment="Right" Margin="0,0,6,0" Click="OKButton_Click" />
-                <Button x:Name="CancelButton" Height="24" Content="Cancel" HorizontalAlignment="Right" Margin="0" Click="CancelButton_Click" />
-            </StackPanel>
-        </Grid>
+        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,6,0,0">
+
+            <Button x:Name="OKButton"  Height="24" Content="OK" Width="60" IsEnabled="False" HorizontalAlignment="Right" Margin="0,0,6,0" Click="OKButton_Click" />
+            <Button x:Name="CancelButton" Margin="0" Height="24" Content="Cancel" Width="60" HorizontalAlignment="Right" Click="CancelButton_Click" />
+        </StackPanel>
     </Grid>
 
 </Window>
