--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/LoginWindow.xaml
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/LoginWindow.xaml
@@ -17,7 +17,7 @@
         
     </Window.Resources>
     <Grid >
-        <ProgressBar x:Name="Progress" IsIndeterminate="True" VerticalAlignment="Center" Height="15" Margin="40" Visibility="Collapsed" />
+        <ProgressBar x:Name="Progress" IsIndeterminate="True" VerticalAlignment="Center" Height="15" Width="220" Visibility="Collapsed" />
         <WebBrowser Visibility="Collapsed" x:Name="LoginBrowser" Margin="2" Navigating="LoginBrowser_Navigating" Navigated="LoginBrowser_Navigated"/>
     </Grid>
 </Window>
