--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/SettingsWindow.xaml
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/SettingsWindow.xaml
@@ -1,16 +1,18 @@
 ﻿<Window
+    x:Class="PurgarNET.AAConnector.Console.SettingsWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:Custom="http://schemas.microsoft.com/SystemCenter/Common/UI/Views" 
     xmlns:local="clr-namespace:PurgarNET.AAConnector.Console" 
-    x:Class="PurgarNET.AAConnector.Console.SettingsWindow" 
+    xmlns:scwpf="http://schemas.microsoft.com/SystemCenter/Common/UI/Wpf"
+    xmlns:toolkit="clr-namespace:Microsoft.Windows.Controls;assembly=wpfToolKit"
     mc:Ignorable="d" 
     d:DesignHeight="450" d:DesignWidth="450" WindowStartupLocation="CenterOwner" Title="Azure Automation Connector Settings" 
     Width="500" Height="450"
-    Topmost="True"
-    Loaded="Window_Loaded" ShowInTaskbar="False"
+    Topmost="False"
+    Loaded="Window_Loaded" ShowInTaskbar="True"
     ResizeMode="NoResize" 
     
     >
@@ -19,7 +21,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/PurgarNET.AAConnector.Console;component/Styles.xaml" />
                 <ResourceDictionary Source="/Microsoft.EnterpriseManagement.UI.Controls;component/Themes/Common.Generic.xaml" />
-               <ResourceDictionary Source="/Microsoft.EnterpriseManagement.ServiceManager.SharedResources;component/CommonStyles/CommonStyles.xaml" />
+                <ResourceDictionary Source="/Microsoft.EnterpriseManagement.ServiceManager.SharedResources;component/CommonStyles/CommonStyles.xaml" />
                 <ResourceDictionary Source="/Microsoft.EnterpriseManagement.ServiceManager.SharedResources;component/BasicControls/BasicControlsCollection.xaml" />
                 <ResourceDictionary Source="/Microsoft.EnterpriseManagement.ServiceManager.SharedResources;component/SolutionsStyles/ApplicationCommonStyles.xaml" />
                 <ResourceDictionary Source="/Microsoft.EnterpriseManagement.ServiceManager.SharedResources;component/AdvancedControls/AdvancedControlsCollection.xaml" />
@@ -32,45 +34,75 @@
         </ResourceDictionary>
 
     </Window.Resources>
+
     <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto">
-        <StackPanel  >
-            <Grid>
-                <Rectangle Grid.ColumnSpan="2" x:Name="imgSuperGridBrand" Fill="{StaticResource SettingsBannerBrush}" />
-                <TextBlock FontSize="20" Foreground="DarkBlue" Text="Azure Automation Connector Settings" Margin="10,10,0,14" />
-            </Grid>
-            
-            <Grid Margin="20"  Visibility="{Binding Path=Settings.IsConfigured, Converter={StaticResource BoolToVisibilityConverter}}">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto"  />
-                    <ColumnDefinition Width="*"  />
-                </Grid.ColumnDefinitions>
+        <Grid>
+            <StackPanel x:Name="ProgressPanel" VerticalAlignment="Center">
+                <ProgressBar IsIndeterminate="True" Height="16" Width="220" />
+                <TextBlock Margin="0,10,0,0" x:Name="ProgressTextBlock" Text="{Binding Path=ProgressStatus}" HorizontalAlignment="Center" />
 
-                <TextBlock Grid.ColumnSpan="2" Margin="0,0,0,6" Text="Currently connected to:" />
+            </StackPanel>
 
-                <TextBlock FontWeight="DemiBold" Grid.Row="1" Text="Tenant ID" />
-                <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Path=Settings.TenantId}" />
-                <TextBlock FontWeight="DemiBold" Grid.Row="2" Text="Subscription ID" />
-                <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Path=Settings.SubscriptionId}" />
-                <TextBlock FontWeight="DemiBold" Grid.Row="3" Text="Resource group" />
-                <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding Path=Settings.ResourceGroupName}" />
-                <TextBlock FontWeight="DemiBold" Margin="0,0,10,0" Grid.Row="4" Text="Automation account" />
-                <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding Path=Settings.AutomationAccountName}" />
+            <StackPanel x:Name="ConnectPanel" Margin="20" VerticalAlignment="Center" Visibility="Collapsed">
+                <ComboBox 
+                    ItemsSource="{Binding Path=AvailableAutomationAccounts}" 
+                    x:Name="AutomationAccountsComboBox" 
+                    DisplayMemberPath="DisplayName"
+                    />
 
-                <StackPanel Margin="10,0,0,0" HorizontalAlignment="Right" x:Name="ButtonsPanel" Grid.Column="3" Grid.Row="1" Grid.RowSpan="6">
-                    <Button Content="Modify" Width="80" Height="26" Margin="0,0,0,8" Click="Connect_Click" />
-                    <Button Content="Disconnect" Width="80" Height="26"/>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,20,0,0">
+                    <Button x:Name="ConnectCommitButton" Content="Connect" Click="ConnectCommitButton_Click" IsEnabled="{Binding ElementName=AutomationAccountsComboBox, Path=SelectedItem, Converter={StaticResource ObjToBoolConverter}}" />
+                    <Button x:Name="ConnectCancelButton" Content="Cancel" Click="ConnectCancelButton_Click" />
                 </StackPanel>
+            </StackPanel>
+            
+            <StackPanel x:Name="MainPanel" Visibility="Collapsed">
+                <Grid>
+                    <Rectangle Grid.ColumnSpan="2" x:Name="imgSuperGridBrand" Fill="{StaticResource SettingsBannerBrush}" />
+                    <TextBlock FontSize="20" Foreground="DarkBlue" Text="Azure Automation Connector Settings" Margin="10,10,0,14" />
+                </Grid>
 
-            </Grid>
-        </StackPanel>
+                <Grid Margin="20"  Visibility="{Binding Path=Settings.IsConfigured, Converter={StaticResource BoolToVisibilityConverter}}">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto"  />
+                        <ColumnDefinition Width="*"  />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Grid.ColumnSpan="2" Margin="0,0,0,6" Text="Currently connected to:" />
+
+                    <TextBlock FontWeight="DemiBold" Grid.Row="1" Text="Tenant ID" />
+                    <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Path=Settings.TenantId}" />
+                    <TextBlock FontWeight="DemiBold" Grid.Row="2" Text="Subscription ID" />
+                    <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Path=Settings.SubscriptionId}" />
+                    <TextBlock FontWeight="DemiBold" Grid.Row="3" Text="Resource group" />
+                    <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding Path=Settings.ResourceGroupName}" />
+                    <TextBlock FontWeight="DemiBold" Margin="0,0,10,0" Grid.Row="4" Text="Automation account" />
+                    <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding Path=Settings.AutomationAccountName}" />
+
+                    <StackPanel Margin="10,0,0,0" HorizontalAlignment="Right" x:Name="ButtonsPanel" Grid.Column="3" Grid.Row="1" Grid.RowSpan="6">
+                        <Button x:Name="ModifyConnectionButton" Content="Modify" Width="80" Height="26" Margin="0,0,0,8" Click="ConnectButton_Click"  />
+                        <Button x:Name="DisconnectButton" Content="Disconnect" Width="80" Height="26" Click="DisconnectButton_Click"/>
+                    </StackPanel>
+
+                </Grid>
+
+                <Grid Margin="30"  Visibility="{Binding Path=Settings.IsConfigured, Converter={StaticResource BoolToVisibilityReverseConverter}}">
+                    <TextBlock Grid.ColumnSpan="2" Margin="0,0,0,6" Text="You are not connected!" />
+                    <!-- TODO: write more text -->
+                    <Button HorizontalAlignment="Left" x:Name="ConnectButton" Content="Connect" Width="80" Height="26" Margin="0,30,0,8" Click="ConnectButton_Click"  />
+                </Grid>
+
+            </StackPanel>
+        </Grid>
     </ScrollViewer>
+
 </Window>
 
