--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/Styles.xaml
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/Styles.xaml
@@ -11,6 +11,7 @@
     <convert:StringToVisibilityConverter x:Key="StringToVisibilityConverter" />
     <convert:StringToBoolConverter x:Key="StringToBoolConverter" />
     <convert:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+    <convert:BoolToVisibilityReverseConverter x:Key="BoolToVisibilityReverseConverter" />
 
 
     <LinearGradientBrush x:Key="BannerBrush" StartPoint="0.5,0" EndPoint=" 0.5,1">
