--- a/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/RunbookSelector.xaml
+++ b/PurgarNET.AAConnector/PurgarNET.AAConnector.Console/RunbookSelector.xaml
@@ -64,10 +64,10 @@
 
             <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,6,0,0">
                 <Button Grid.Row="1" Height="24" x:Name="RefreshButton" Content="Refresh" Margin="0"  HorizontalAlignment="Left" Click="RefreshButton_Click"  />
+                <ProgressBar x:Name="Progress" IsIndeterminate="True" Margin="10,0,0,0" Width="100" Height="16" Visibility="Collapsed" />
             </StackPanel>
 
             <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,6,0,0">
-
                 <Button x:Name="OKButton" Height="24" Content="OK"  IsEnabled="False" HorizontalAlignment="Right" Margin="0,0,6,0" Click="OKButton_Click" />
                 <Button x:Name="CancelButton" Height="24" Content="Cancel" HorizontalAlignment="Right" Margin="0" Click="CancelButton_Click" />
             </StackPanel>
